--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -4,7 +4,7 @@
     <title>ToDo List</title>
     <script type="text/javascript" src="/vendors/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/clientapp.js"></script>
-    <!-- <link rel="stylesheet" href="form-style.css" /> -->
+    <link rel="stylesheet" href="scripts/somestyle.css" />
   </HEAD>
   <body>
     <div class="intakeForm">
@@ -24,10 +24,9 @@
       </form>
     </div>
     <div>
-      <h1>To Do List:</h1>
+      <h1>To Do List</h1>
     </div>
     <div class="container">
-
     </div>
   </body>
 </HTML>
