--- a/server/public/scripts/somestyle.css
+++ b/server/public/scripts/somestyle.css
@@ -19,7 +19,9 @@ h1 {
 .toDoList {
   float: left;
   background-color: yellow;
-  /*background-image: url("Post-It.png");*/
+  /*background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: url("Post-It.png");*/
   border: 2px solid black;
   margin: 5px;
   padding: 10px;
